--- a/naturet/views/users/categories.hbs
+++ b/naturet/views/users/categories.hbs
@@ -1,10 +1,13 @@
-<h1>profile completed</h1>
+<h1>profile uncompleted</h1>
+
+{{#if errors.error}}
+       <div class="invalid-feedback">
+       <h1>{{ errors.error }}</h1>  
+       </div>
+{{/if}}
 
 <div class="form-group">
-    <form action="/sessions/{{ user._id }}/edit" method="post">
-      {{!-- <div class="input-group mb-2">
-        <input type="text" class="form-control" name="categories" placeholder="{{user.id}}"/>
-      </div> --}}
+    <form action="/users/{{ session._id }}/edit" method="POST">
       <label class="btn btn-default">
           <input type="checkbox" id="tequila" name="categories" value="tequila">
       </label>
