added categories js and font, css and hbs styled parts are commented

--- a/naturet/public/stylesheets/style.css
+++ b/naturet/public/stylesheets/style.css
@@ -1,3 +1,7 @@
+/* Possible colors :  /*#00aad2*/
+
+
+
 body {
   padding: 20px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
@@ -6,3 +10,191 @@ body {
 a {
   color: #00B7FF;
 }
+
+/* Icomoon fonts */
+
+body{
+  margin: 0;
+}
+
+/* Descomentar esto para añadir estilo
+
+
+@font-face {
+  font-family: 'icomoon';
+  src:  url('../fonts/icomoon.eot?67gml9');
+  src:  url('../fonts/icomoon.eot?67gml9#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?67gml9') format('truetype'),
+    url('../fonts/icomoon.woff?67gml9') format('woff'),
+    url('../fonts/icomoon.svg?67gml9#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-001:before {
+  content: "\e900";
+}
+.icon-002:before {
+  content: "\e901";
+}
+.icon-003:before {
+  content: "\e902";
+}
+.icon-004:before {
+  content: "\e903";
+}
+.icon-005:before {
+  content: "\e904";
+}
+.icon-006:before {
+  content: "\e905";
+}
+.icon-007:before {
+  content: "\e906";
+}
+.icon-008:before {
+  content: "\e907";
+}
+.icon-009:before {
+  content: "\e908";
+}
+.icon-010:before {
+  content: "\e909";
+}
+.icon-011:before {
+  content: "\e90a";
+}
+.icon-012:before {
+  content: "\e90b";
+}
+.icon-013:before {
+  content: "\e90c";
+}
+.icon-014:before {
+  content: "\e90d";
+}
+.icon-015:before {
+  content: "\e90e";
+}
+.icon-016:before {
+  content: "\e90f";
+}
+.icon-017:before {
+  content: "\e910";
+}
+.icon-018:before {
+  content: "\e911";
+}
+.icon-019:before {
+  content: "\e912";
+}
+.icon-020:before {
+  content: "\e913";
+}
+.icon-021:before {
+  content: "\e914";
+}
+.icon-022:before {
+  content: "\e915";
+}
+.icon-023:before {
+  content: "\e916";
+}
+.icon-024:before {
+  content: "\e917";
+}
+.icon-025:before {
+  content: "\e918";
+}
+.icon-026:before {
+  content: "\e919";
+}
+.icon-027:before {
+  content: "\e91a";
+}
+.icon-028:before {
+  content: "\e91b";
+}
+.icon-029:before {
+  content: "\e91c";
+}
+.icon-030:before {
+  content: "\e91d";
+}
+.icon-031:before {
+  content: "\e91e";
+}
+.icon-032:before {
+  content: "\e91f";
+}
+.icon-033:before {
+  content: "\e920";
+}
+.icon-034:before {
+  content: "\e921";
+}
+.icon-035:before {
+  content: "\e922";
+}
+
+:root {
+  --category-bg-color: #00c98d;
+} 
+
+.category-card{
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  display: flex;
+  padding: 15px;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 25px;
+  color: grey;
+  cursor: pointer;
+  transition: 0.1s;
+  outline: 1px solid grey;
+  box-shadow: 0 0 3px #ddd;
+  background-color: rgba(0,0,0,0.009);
+}
+
+.category-selected, .category-selected:hover{
+  background-color: var(--category-bg-color) !important;
+  color: white !important;
+  outline: 0px solid var(--category-bg-color) !important;
+  transition: 0.17s;
+}
+
+.category-selected p{
+  font-weight: 400;
+}
+
+.input-category{
+  position: absolute;
+
+}
+
+.category-card span{
+  font-size: 80px;
+  margin-bottom: 10px;
+}
+
+.category-card:hover{
+  color:black;
+  outline: 4px solid var(--category-bg-color);
+  background-color: white;
+}
+*/
