--- a/naturet/views/layout.hbs
+++ b/naturet/views/layout.hbs
@@ -11,12 +11,15 @@
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <script src="https://apis.google.com/js/platform.js" async defer></script>
 <meta name="google-signin-client_id" content="328598068379-7kdcok4tf4ng868nct6judoqkqt5l009.apps.googleusercontent.com">
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 
 <body>
-  <div class="container">
+
     {{> nav }} {{{ body }}}
-  </div>
+ 
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
