--- a/naturet/views/users/profile.hbs
+++ b/naturet/views/users/profile.hbs
@@ -1,27 +1,149 @@
-<h1>profile uncompleted</h1>
-
-
 <div class="container">
-  <h1>categories</h1>
-  {{#if errors.error }}
-    <h2>{{ errors.error }}</h2>
-  {{/if}}
-  <form class="" method="POST">
-  <div class="row">
-    {{#each allCategories as |category| }}
-   
-      <div class="col-xl-2 col-md-3 col-6">
-         <input type='checkbox' name="categories" class="input-category" id="{{ category.id }}" value="{{ category.id }}" {{#isCategorySelected ../session category ../categories }}{{/isCategorySelected}}/>
-        <div class="category-card">
-          {{!-- <span class='icon-{{category.fontnum}}'></span> --}} <!-- descomentar esto par añadir estilo --> 
-          <p class="category-name">{{ category.name }}  </p>
-        </div>
-    </div>
-    </input>
-    
-    {{/each}}
-     <button class="btn btn-primary btn-block" type="submit">Submit</button>
-    </form>
-  </div>
-</div>
+  <div class="row pb-5">
 
+    <div class="col-xl-3 col-md-3 col-12 ">
+      <div style="">
+        <div class=" profile-navigation d-flex flex-column  ">
+          <a href="">profile</a>
+          <a href="">profile</a>
+          <a href="">profile</a>
+          <a href="">profile</a>
+          <a class="btn btn danger">View Profile</a>
+        </div>
+      </div>
+
+    </div>
+    <div class="col-xl-9 col-md-9 col-12">
+
+
+      <h1>Your Profile</h1>
+      <img src="{{session.photo}}">
+      <h3>{{session.name}}</h3>
+      <hr>
+      <h1>categories</h1>
+      <h5 class="mb-3">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor in</h5>
+      <p class="mb-5">Lit amet, consectetur adipiscing elit, sed do eiusmod tempor inLorem ipsum dolor sit amet,
+        consectetur adipiscing elit, sed do eiusmod tempor inLorem ipsum dolor sit amet, consectetur adipiscing elit,
+        sed do eiusmod tempor inLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor in</p>
+
+      {{#if errors.error }}
+      <h2>{{ errors.error }}</h2>
+      {{/if}}
+      <form class="" method="POST">
+        <div class="row">
+          {{#each allCategories as |category| }}
+
+          <div class="col-xl-2 col-md-3 col-6">
+            <input type='checkbox' name="categories" class="input-category" id="{{ category.id }}" value="{{ category.id }}"
+              {{#isCategorySelected ../session category ../categories }} {{/isCategorySelected}} />
+            <div class="category-card">
+              {{!-- <span class='icon-{{category.fontnum}}'></span> --}}
+              <!-- descomentar esto par añadir estilo -->
+              <p class="category-name">{{ category.name }} </p>
+            </div>
+          </div>
+          </input>
+
+          {{/each}}
+
+        </div>
+        <hr>
+        <div>
+          <h1>Some description</h1>
+          <div class="mb-2">
+            <h5 class="mb-3">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor in</h5>
+            <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor inLorem
+              ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor inLorem ipsum dolor sit amet,
+              consectetur adipiscing elit, sed do eiusmod tempor inLorem ipsum dolor sit amet, consectetur adipiscing
+              elit, sed do eiusmod tempor inLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+              tempor in</p>
+            <h4>about you</h4><small>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</small>
+            <input type="text" class="w-100 mt-1"></input>
+          </div>
+          <div class="mb-2">
+            <h4>Birth Date</h4><small>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</small>
+            <select class="d-table mt-2">
+              <option>12,18,1994</option>
+            </select>
+          </div>
+
+          <div class="mb-2">
+            <h4>From:</h4><small>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</small>
+            <input type="text" class="w-100 mt-1"></input>
+          </div>
+          <div class="mb-2">
+            <h4>Your phone number</h4><small>Lorem ipsum dolor sit amet, consectetur adipiscing elit, Lorem ipsum dolor
+              sit amet, consectetur adipiscing elit</small>
+            <input type="text" class="w-100 mt-1"></input>
+          </div>
+        </div>
+        <hr class="mt-5">
+        <div>
+          <h1>User Rol</h1>
+          <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor inLorem ipsum
+            dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor inLorem ipsum dolor sit amet,
+            consectetur adipiscing elit, sed do eiusmod tempor inLorem ipsum dolor sit amet, consectetur adipiscing
+            elit, sed do eiusmod tempor inLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+            tempor in</p>
+          <button type="button" class="btn btn-primary">User</button>
+          <button type="button" class="btn btn-warning">Creator</button>
+
+          <div class="row mt-4 d-flex ">
+            <div class='col-12 mt-4 mb-3'>
+              <h4>Type of Expertise</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, Lorem ipsum dolor
+                sit amet, consectetur adipiscing elit</p>
+              <div class="mt-3 mb-2">
+                <input value="empresa" type="checkbox"> Empresa, Lorem ipsum dolor sit amet, consectetur </input>
+              </div>
+              <div class="mb-2">
+                <input value="profesional" type="checkbox"> Profesional, Lorem ipsum dolor sit amet, consectetur
+                </input>
+              </div>
+              <div class="mb-2">
+                <input value="organization" type="checkbox"> ONG, Lorem ipsum dolor sit amet, consectetur onsectetur</input>
+              </div>
+            </div>
+
+            <div class='col-12 mt-4 mb-4'>
+              <h4>Reservation polities</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, Lorem ipsum elit</p>
+              <div class="mt-3 mb-2">
+                <input value="empresa" type="checkbox"> Empresa, Lorem ipsum dolor sit amet, consectetur </input>
+              </div>
+              <div class="mb-2">
+                <input value="profesional" type="checkbox"> Profesional, Lorem ipsum dolor sit amet, consectetur
+                </input>
+              </div>
+              <div class="mb-2">
+                <input value="organization" type="checkbox"> ONG, Lorem ipsum dolor sit amet, consectetur onsectetur</input>
+              </div>
+            </div>
+
+            <div class="col-12 mb-2">
+              <h4>Enterprise email:</h4><small>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</small>
+              <input type="text" class="w-100 mt-1"></input>
+            </div>
+
+            <div class="col-xl-4 col-md-4 col-12">
+              <h4>Your credit card</h4><small></small>
+              <input type="text" class="w-100 mt-1"></input>
+              <small>Lorem it amet, consectetur adipiscing elit, Lorem ipsum dolor
+                sit amet, consectetur adipiscing elit</small>
+            </div>
+
+            <div class="col-xl-8 col-md-8 col-12">
+              <h4>Your acreditation</h4>
+              <input type="text" class="w-100 mt-1"></input>
+              <small>Lorem it amet, consectetur adipiscing elit, Lorem ipsum dolor
+                sit amet, consectetur adipiscing elit</small>
+            </div>
+
+          </div>
+        </div>
+        <hr>
+        <button class="btn btn-primary btn-block p-3" type="submit">Guardar</button>
+      </form>
+    </div>
+  </div>
+</div>s
