--- a/naturet/views/users/profile.hbs
+++ b/naturet/views/users/profile.hbs
@@ -4,9 +4,9 @@
     <div class="col-xl-3 col-md-3 col-12 ">
       <div style="">
         <div class=" profile-navigation d-flex flex-column  ">
-          <a href="">profile</a>
-          <a href="">profile</a>
-          <a href="">profile</a>
+          <a href="">Categories</a>
+          <a href="">Some description</a>
+          <a href="">User role</a>
           <a href="">profile</a>
           <a class="btn btn danger">View Profile</a>
         </div>
@@ -48,7 +48,7 @@
 
         </div>
         <hr>
-        <div>
+        <div class="form-group">
           <h1>Some description</h1>
           <div class="mb-2">
             <h5 class="mb-3">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor in</h5>
@@ -58,35 +58,45 @@
               elit, sed do eiusmod tempor inLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
               tempor in</p>
             <h4>about you</h4><small>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</small>
-            <input type="text" class="w-100 mt-1"></input>
+            <input type="text" name="address" id="address" class="w-100 mt-1" value="{{session.address}}">
           </div>
           <div class="mb-2">
             <h4>Birth Date</h4><small>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</small>
-            <select class="d-table mt-2">
-              <option>12,18,1994</option>
+            <input type="date" name="birth" class="d-table mt-2" value="09-09-1983"> 
+          </div>
+          <div class="mb-2">
+            <h4>Lenguage</h4><small>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</small>
+            <select name="languages">
+              {{#each session.languages}}
+              <option value="{{this}}">{{this}}</option>
+              {{/each}}
             </select>
           </div>
 
           <div class="mb-2">
             <h4>From:</h4><small>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</small>
-            <input type="text" class="w-100 mt-1"></input>
+            <input type="text" name="from" class="w-100 mt-1">
           </div>
           <div class="mb-2">
             <h4>Your phone number</h4><small>Lorem ipsum dolor sit amet, consectetur adipiscing elit, Lorem ipsum dolor
               sit amet, consectetur adipiscing elit</small>
-            <input type="text" class="w-100 mt-1"></input>
+            <input type="text" name="phone" class="w-100 mt-1">
           </div>
         </div>
         <hr class="mt-5">
-        <div>
+
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="checkbox" id="creator" name="creator" value="true" checked="{{session.creator}}">
+          <label class="form-check-label" for="creator">Creator</label>
+        </div>
+
+        <div id="rol">
           <h1>User Rol</h1>
           <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor inLorem ipsum
             dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor inLorem ipsum dolor sit amet,
             consectetur adipiscing elit, sed do eiusmod tempor inLorem ipsum dolor sit amet, consectetur adipiscing
             elit, sed do eiusmod tempor inLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
             tempor in</p>
-          <button type="button" class="btn btn-primary">User</button>
-          <button type="button" class="btn btn-warning">Creator</button>
 
           <div class="row mt-4 d-flex ">
             <div class='col-12 mt-4 mb-3'>
@@ -94,14 +104,14 @@
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, Lorem ipsum dolor
                 sit amet, consectetur adipiscing elit</p>
               <div class="mt-3 mb-2">
-                <input value="empresa" type="checkbox"> Empresa, Lorem ipsum dolor sit amet, consectetur </input>
+                <input value="empresa" name="expertise" type="checkbox"> Empresa, Lorem ipsum dolor sit amet, consectetur 
               </div>
               <div class="mb-2">
-                <input value="profesional" type="checkbox"> Profesional, Lorem ipsum dolor sit amet, consectetur
-                </input>
+                <input value="profesional" name="profesional" type="checkbox"> Profesional, Lorem ipsum dolor sit amet, consectetur
+                
               </div>
               <div class="mb-2">
-                <input value="organization" type="checkbox"> ONG, Lorem ipsum dolor sit amet, consectetur onsectetur</input>
+                <input value="organization" name="organization" type="checkbox"> ONG, Lorem ipsum dolor sit amet, consectetur onsectetur
               </div>
             </div>
 
@@ -109,38 +119,39 @@
               <h4>Reservation polities</h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, Lorem ipsum elit</p>
               <div class="mt-3 mb-2">
-                <input value="empresa" type="checkbox"> Empresa, Lorem ipsum dolor sit amet, consectetur </input>
+                <input value="empresa" type="checkbox"> Empresa, Lorem ipsum dolor sit amet, consectetur 
               </div>
               <div class="mb-2">
                 <input value="profesional" type="checkbox"> Profesional, Lorem ipsum dolor sit amet, consectetur
-                </input>
+                
               </div>
               <div class="mb-2">
-                <input value="organization" type="checkbox"> ONG, Lorem ipsum dolor sit amet, consectetur onsectetur</input>
+                <input value="organization" type="checkbox"> ONG, Lorem ipsum dolor sit amet, consectetur onsectetur
               </div>
             </div>
 
             <div class="col-12 mb-2">
               <h4>Enterprise email:</h4><small>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</small>
-              <input type="text" class="w-100 mt-1"></input>
+              <input type="text" name="enterprise_email" class="w-100 mt-1">
             </div>
 
             <div class="col-xl-4 col-md-4 col-12">
               <h4>Your credit card</h4><small></small>
-              <input type="text" class="w-100 mt-1"></input>
+              <input type="text" name="card" class="w-100 mt-1">
               <small>Lorem it amet, consectetur adipiscing elit, Lorem ipsum dolor
                 sit amet, consectetur adipiscing elit</small>
             </div>
 
             <div class="col-xl-8 col-md-8 col-12">
               <h4>Your acreditation</h4>
-              <input type="text" class="w-100 mt-1"></input>
+              <input type="text" class="w-100 mt-1">
               <small>Lorem it amet, consectetur adipiscing elit, Lorem ipsum dolor
                 sit amet, consectetur adipiscing elit</small>
             </div>
 
           </div>
         </div>
+
         <hr>
         <button class="btn btn-primary btn-block p-3" type="submit">Guardar</button>
       </form>
