--- a/naturet/public/stylesheets/style.css
+++ b/naturet/public/stylesheets/style.css
@@ -21,6 +21,18 @@ body{
 position: fixed;
 }
 
+.autocomplete-items{
+max-height: 97px;
+overflow: hidden;
+position: absolute;
+background-color: white;
+width: 100%;
+}
+
+.countries-container{
+  cursor: pointer;
+}
+
 /* Descomentar esto para añadir estilo
 
 
@@ -202,3 +214,11 @@ position: fixed;
   background-color: white;
 }
 */
+
+@media (max-width: 768px) {
+
+.profile-container{
+  padding-left: 0px !important;
+  padding-right: 0px !important;
+}
+}
