--- a/naturet/views/users/create.hbs
+++ b/naturet/views/users/create.hbs
@@ -8,14 +8,11 @@
           <a href="">Some description</a>
           <a href="">User role</a>
           <a href="">profile</a>
-          <a class="btn btn danger" href="/profile">View Profile</a>
         </div>
       </div>
-
     </div>
+
     <div class="col-xl-9 col-md-9 col-12">
-
-
       <h1>Your Profile</h1>
       <img src="{{session.photo}}">
       <h3>{{session.name}}</h3>
@@ -25,21 +22,17 @@
       <p class="mb-5">Lit amet, consectetur adipiscing elit, sed do eiusmod tempor inLorem ipsum dolor sit amet,
         consectetur adipiscing elit, sed do eiusmod tempor inLorem ipsum dolor sit amet, consectetur adipiscing elit,
         sed do eiusmod tempor inLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor in</p>
-
       {{#if errors.error }}
       <h2>{{ errors.error }}</h2>
       {{/if}}
       <form class="" method="POST" enctype="multipart/form-data">
         <div class="row">
           {{#each allCategories as |category| }}
-
           <div class="col-xl-2 col-md-3 col-6">
                <input type='checkbox' name="categories" class="input-category" id="{{ category.id }}" value="{{ category.id }}"
               {{#isCategorySelected ../session category ../categories }} {{/isCategorySelected}} />
             <div class="category-card">
-           
               <span class='icon-{{category.fontnum}}'></span>
-              <!-- descomentar esto par añadir estilo -->
               <p class="category-name">{{ category.name }} </p>
             </div>
           </div>
@@ -88,81 +81,7 @@
           <h4>Your Album</h4><small>Some photos that can tell something about you and your interests</small>
           <span class="input-group-text"> <i class="fas fa-image"></i> </span>
         </div>
-        <input type="file" class="form-control" name="picture" placeholder="Picture" value="string" />
-
-
-        <hr class="mt-5">
-
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="checkbox" id="creator" name="creator" value="true" checked="{{session.creator}}">
-          <label class="form-check-label" for="creator">Creator</label>
-        </div>
-
-        {{#if session.creator}}
-        <div id="rol">
-          <h1>User Rol</h1>
-          <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor inLorem ipsum
-            dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor inLorem ipsum dolor sit amet,
-            consectetur adipiscing elit, sed do eiusmod tempor inLorem ipsum dolor sit amet, consectetur adipiscing
-            elit, sed do eiusmod tempor inLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-            tempor in</p>
-
-          <div class="row mt-4 d-flex ">
-
-            <div class='col-12 mt-4 mb-3'>
-              <h4>Type of Expertise</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, Lorem ipsum dolor
-                sit amet, consectetur adipiscing elit</p>
-              <div class="mt-3 mb-2">
-                <input value="empresa" name="expertise" type="checkbox"> Empresa, Lorem ipsum dolor sit amet,
-                consectetur
-              </div>
-              <div class="mb-2">
-                <input value="profesional" name="profesional" type="checkbox"> Profesional, Lorem ipsum dolor sit amet,
-                consectetur
-              </div>
-              <div class="mb-2">
-                <input value="organization" name="organization" type="checkbox"> ONG, Lorem ipsum dolor sit amet,
-                consectetur onsectetur
-              </div>
-            </div>
-
-            <div class='col-12 mt-4 mb-4'>
-              <h4>Reservation polities</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, Lorem ipsum elit</p>
-              <div class="mt-3 mb-2">
-                <input value="empresa" type="checkbox"> Empresa, Lorem ipsum dolor sit amet, consectetur
-              </div>
-              <div class="mb-2">
-                <input value="profesional" type="checkbox"> Profesional, Lorem ipsum dolor sit amet, consectetur
-              </div>
-              <div class="mb-2">
-                <input value="organization" type="checkbox"> ONG, Lorem ipsum dolor sit amet, consectetur onsectetur
-              </div>
-            </div>
-
-            <div class="col-12 mb-2">
-              <h4>Enterprise email:</h4><small>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</small>
-              <input type="text" name="enterprise_email" class="w-100 mt-1">
-            </div>
-
-            <div class="col-xl-4 col-md-4 col-12">
-              <h4>Your credit card</h4><small></small>
-              <input type="text" name="card" class="w-100 mt-1">
-              <small>Lorem it amet, consectetur adipiscing elit, Lorem ipsum dolor
-                sit amet, consectetur adipiscing elit</small>
-            </div>
-
-            <div class="col-xl-8 col-md-8 col-12">
-              <h4>Your acreditation</h4>
-              <input type="text" class="w-100 mt-1">
-              <small>Lorem it amet, consectetur adipiscing elit, Lorem ipsum dolor
-                sit amet, consectetur adipiscing elit</small>
-            </div>
-
-          </div>
-        </div>
-        {{/if}}
+        <input type="file" class="form-control" name="picture" placeholder="Picture" value="string" multiple />
         <hr>
         <button class="btn btn-primary btn-block p-3" type="submit">Guardar</button>
       </form>
