feat: users creator form and validations done

--- a/naturet/views/users/create.hbs
+++ b/naturet/views/users/create.hbs
@@ -64,7 +64,7 @@
           <div class="mb-2">
             <h4>From:</h4><small>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</small>
             <div class="autocomplete">
-              <input id="myInput" type="text" name="country" placeholder="Country" value='{{session.country}}'>
+              <input autocomplete="off" id="myInput" type="text" name="country" placeholder="Country" value='{{session.country}}'>
             </div>
           </div>
 
