--- a/naturet/views/users/creator/edit.hbs
+++ b/naturet/views/users/creator/edit.hbs
@@ -33,83 +33,86 @@
             <div class='col-12 mt-4 mb-3 expertise-check-group'>
               <hr>
               <h4>Type of Expertise</h4>
+              
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, Lorem ipsum dolor
                 sit amet, consectetur adipiscing elit</p>
               <div class="mt-3 mb-2 expertise-checkbox">
-                <input value="enterprise" name="expertise" type="checkbox" class="regular-checkbox"> Empresa, Lorem
+                <input value="enterprise" name="expertise" type="checkbox" class="regular-checkbox" {{#ifCond "enterprise" session.expertise}}{{/ifCond}}  > Empresa, Lorem
                 ipsum dolor sit amet,
                 consectetur
               </div>
               <div class="mb-2 expertise-checkbox">
-                <input value="proffesional" name="expertise" type="checkbox" class="regular-checkbox"> Profesional,
+                <input value="proffesional" name="expertise" type="checkbox" class="regular-checkbox" {{#ifCond "proffesional" session.expertise}}{{/ifCond}} > Profesional,
                 Lorem ipsum dolor sit amet,
                 consectetur
               </div>
               <div class="mb-2 expertise-checkbox">
-                <input value="organization" name="expertise" type="checkbox" class="regular-checkbox"> ONG, Lorem ipsum
+                <input value="organization" name="expertise" type="checkbox" class="regular-checkbox" {{#ifCond "organization" session.expertise}}{{/ifCond}} > ONG, Lorem ipsum
                 dolor sit amet,
                 consectetur onsectetur
               </div>
+              {{#if errors.expertise}}
+                 <h3>{{errors.expertise}}</h3> 
+              {{/if}}
+               <hr>
             </div>
 
             <div class='col-12 mt-4 mb-4'>
-              <hr>
+
               <h4>Reservation polities</h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, Lorem ipsum elit</p>
-              <div class="mt-3 mb-2 politics-checkbox">
-                <input name="politic" type="checkbox" class="regular-checkbox" value="Para obtener el reembolso íntegro de
-                las tarifas de alojamiento, la cancelación debe realizarse al menos 24 horas antes de la hora local de
-                entrada (o las 15:00 si no aparece especificada) del día de llegada."> Para obtener el reembolso íntegro de
-                las tarifas de alojamiento, la cancelación debe realizarse al menos 24 horas antes de la hora local de
-                entrada (o las 15:00 si no aparece especificada) del día de llegada.
-              </div>
-              <div class="mb-2 politics-checkbox">
-                <input name="politic" type="checkbox" class="regular-checkbox" value="Para obtener el reembolso íntegro de
-                las tarifas de alojamiento, la cancelación debe realizarse al menos cinco días completos antes de la
-                hora local de entrada (las 15:00, si no aparece especificada) del día de llegada"> Para obtener el reembolso íntegro de
-                las tarifas de alojamiento, la cancelación debe realizarse al menos cinco días completos antes de la
-                hora local de entrada (las 15:00, si no aparece especificada) del día de llegada
-              </div>
-              <div class="mb-2 politics-checkbox">
-                <input name="politic" type="checkbox" class="regular-checkbox" value="Para obtener un reembolso completo de
-                las tarifas de alojamiento, la cancelación debe realizarse durante las 48 horas siguientes al momento
-                de hacer la reserva y al menos 14 días completos antes del día y la hora local de la llegada al
-                alojamiento (o, si no se especifica, antes de las 15:00). En caso contrario, no recibirás un reembolso."> Para obtener un reembolso completo de
-                las tarifas de alojamiento, la cancelación debe realizarse durante las 48 horas siguientes al momento
-                de hacer la reserva y al menos 14 días completos antes del día y la hora local de la llegada al
-                alojamiento (o, si no se especifica, antes de las 15:00). En caso contrario, no recibirás un reembolso.
-              </div>
+
+            {{#each allPolitics as |politic|}}
+                <div class="mt-3 mb-2 politics-checkbox">
+                   <input name="politic" type="checkbox" class="regular-checkbox" value="{{politic.name}}"  {{#isPoliticSelected ../session politic ../politics }} {{/isPoliticSelected}} />  {{politic.name}}
+                </div>
+              {{/each}}
+              
+               {{#if errors.politic}}
+                 <h3>{{errors.politic}}</h3> 
+              {{/if}}
               <hr>
+             
             </div>
 
             <div class="col-12 mb-2">
               <h4>Enterprise or Personal description:</h4><small>Lorem ipsum dolor sit amet, consectetur adipiscing
                 elit,</small>
-              <input type="text" name="enterprise_email" class="w-100 mt-1">
+              <input type="text" name="enterpriseDescription" class="w-100 mt-1" value="{{session.enterpriseDescription}}">
               <hr>
             </div>
 
             <div class="col-12 mb-2 mt-4">
               <h4>Enterprise or Profesional email:</h4><small>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</small>
-              <input type="text" name="enterprise_email" class="w-100 mt-1">
+              <input type="email" name="enterpriseEmail" class="w-100 mt-1" value="{{session.enterpriseEmail}}">
+                 {{#if errors.enterpriseEmail}}
+                 <h3>{{errors.enterpriseEmail}}</h3> 
+              {{/if}}
               <hr>
+             
             </div>
 
             <div class="col-xl-12 col-md-12 col-12">
               <h4>Your acreditation</h4>
               <small>Lorem it amet, consectetur adipiscing elit, Lorem ipsum dolor
                 sit amet, consectetur adipiscing elit</small>
-              <input type="text" class="w-100 mt-1">
+              <input name="acreditation" type="text" class="w-100 mt-1" value="{{session.acreditation}}">
+                   {{#if errors.acreditation}}
+                 <h3>{{errors.acreditation}}</h3> 
+              {{/if}}
               <hr>
             </div>
+
+       
+
+            
 
             <div class="col-xl-12 col-md-12 col-12">
               <h4>Your Enterprise Photo</h4>
               <small class="mb-2">Upload your enterprise logo if you have it</small><br>
               <span> <i class="fas fa-image"></i> </span>
-              <input class="mt-2" type="file" name="picture" placeholder="Picture" value="string" />
+              <input class="mt-2" type="file" name="enterprise_picture" placeholder="Logo of your Enterprise" value="string" />
             </div>
-
             <hr>
           </div>
         </div>
