--- a/naturet/public/stylesheets/style.css
+++ b/naturet/public/stylesheets/style.css
@@ -13,35 +13,47 @@ a {
 
 /* Icomoon fonts */
 
-body{
+body {
   margin: 0;
 }
 
-.profile-navigation{
-position: fixed;
+.profile-navigation {
+  position: fixed;
 }
 
-.autocomplete-items{
-max-height: 97px;
-overflow: hidden;
-position: absolute;
-background-color: white;
-width: 100%;
+.autocomplete-items {
+  max-height: 97px;
+  overflow: hidden;
+  position: absolute;
+  background-color: white;
+  width: 100%;
 }
 
-.countries-container{
+.countries-container {
   cursor: pointer;
+}
+
+#map {
+  width: 100%;
+  height: 400px;
+  margin-top: 20px;
+}
+
+#map2 {
+  width: 100%;
+  height: 400px;
+  margin-top: 20px;
 }
 
 /* .input-category{
   visibility: hidden;
 }
 */
-.noevent{
+.noevent {
   pointer-events: none;
-} 
+}
 
-input[type=file]{
+input[type=file] {
   max-width: 100%;
 }
 
@@ -232,8 +244,8 @@ input[type=file]{
 */
 @media (max-width: 768px) {
 
-.profile-container{
-  padding-left: 0px !important;
-  padding-right: 0px !important;
-}
+  .profile-container {
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+  }
 }
