--- a/naturet/views/experiences/form.hbs
+++ b/naturet/views/experiences/form.hbs
@@ -1,70 +1,181 @@
-{{#if experience.isNew }}
-  <form action="/experiences/create" method="post">
-  <h1>New experience</h1>
-{{else}}
-  <form action="/experience/{{experience.id}}/edit" method="post">
-  <h1>Edit experience</h1>
-{{/if}}
+<article id="create-user">
+  <div class="container">
+    <div class="row pb-5">
 
-  <div class="form-group">
-    <label for="name">Nombre de la actividad</label>
-    <input type="text" class="form-control" id="name" name="name" value="{{experience.name}}">
-  </div>
-
-  <div class="form-group">
-    <label for="categories">Tipo de expereriencia</label>
-    <input type="text" class="form-control" id="categories" name="categories" value="{{experience.categories}}">
-  </div>
-  <div class="form-group">
-    <label for="price">Precio</label>
-    <input type="Number" class="form-control" id="price" name="price" value="{{experience.price}}">
-  </div>
-  <div class="form-group">
-    <label for="languages">Idiomas</label>
-    <select>
-      {{#each experience.languages}}
-      <option value="{{this}}">{{this}}</option>
-      {{/each}}
-    </select>
-    
-  
-  </div>
-  <div class="form-group">
-    <label for="duration">Duración</label>
-    <input type="Number" class="form-control" id="duration" name="duration" value="{{experience.duration}}">
-  </div>
-  <div class="form-group">
-    <label for="includes">¿Que incluye?</label>
-    <input type="text" class="form-control" id="includes" name="includes" value="{{experience.includes}}">
-  </div>
-  <div class="form-group">
-    <label for="description">Descripción</label>
-    <textarea class="form-control" name="description" rows=3>{{experience.description}}</textarea>
-  </div>
-  <div class="form-group">
-    <label for="anymore">¿Que debes saber?</label>
-    <textarea class="form-control" name="anymore" rows=2>{{experience.anymore}}</textarea>
-  </div>
-  <div class="form-group">
-    <label for="photos">Fotos</label>
-    <input type="Number" class="form-control" id="photos" name="photos" value="{{experience.photos}}">
-  </div>
-  <div class="input-group mb-2">
-        <div class="input-group-prepend">
-          <span class="input-group-text"> <i class="fas fa-map-marker"></i> </span>
+      <div class="col-xl-3 col-md-3 col-12 ">
+        <div style="">
+          <div class=" profile-navigation d-flex flex-column  ">
+            <a href="#categories">Categories</a>
+            <a href="#description">Some description</a>
+            <a href="#lugar">Lugar</a>
+            <a class="btn btn danger">View Profile</a>
+          </div>
         </div>
-        <input type="text" id="latitude" class="form-control" name="latitude" placeholder="Latitude"/>
       </div>
 
-  <div class="input-group mb-2">
-        <div class="input-group-prepend">
-          <span class="input-group-text"> <i class="fas fa-map-marker"></i> </span>
-        </div>
-        <input type="text" id="longitude" class="form-control" name="longitude" placeholder="Longitude"/>
-  </div>
+      <div class="col-xl-9 col-md-9 col-12">
 
+        <h1>Your seller profile</h1>
+        <img src="{{session.photo}}">
+        <h3>{{session.name}}</h3>
+        <hr>
 
-  
+        {{#if errors.error }}
+        <h2>{{ errors.error }}</h2>
+        {{/if}}
 
-  <button type="submit" class="btn btn-primary">Submit</button>
-</form> 
+        {{#unless experience }}
+        <form action="/experiences/create" method="post" onsubmit="addPathToForm(this)">
+          <h1>New experience</h1>
+          <hr>
+          <h1 id="categories">categories</h1h>
+            <h5 class="mb-3">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor in</h5>
+            <p class="mb-5">Lit amet, consectetur adipiscing elit, sed do eiusmod tempor inLorem ipsum dolor sit amet,
+              consectetur adipiscing elit, sed do eiusmod tempor inLorem ipsum dolor sit amet, consectetur adipiscing
+              elit,
+              sed do eiusmod tempor inLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor in</p>
+
+            <div class="row">
+              {{#each allCategories as |category| }}
+
+              <div class="col-xl-2 col-md-3 col-6">
+                <input type='checkbox' name="categories" class="input-category" id="{{ category.id }}" value="{{ category.id }}" />
+                <div class="category-card">
+                  <span class='icon-{{category.fontnum}}'></span>
+                  <!-- descomentar esto par añadir estilo -->
+                  <p class="category-name">{{ category.name }} </p>
+                </div>
+              </div>
+        
+              {{/each}}
+
+            </div>
+
+            {{else}}
+            <form action="/experiences/{{experience.id}}/edit" method="post" onsubmit="addPathToForm(this)">
+              <h1>Edit experience</h1>
+              <hr>
+              <h1 id="categories">categories</h1>
+              <h5 class="mb-3">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor in</h5>
+              <p class="mb-5">Lit amet, consectetur adipiscing elit, sed do eiusmod tempor inLorem ipsum dolor sit
+                amet,
+                consectetur adipiscing elit, sed do eiusmod tempor inLorem ipsum dolor sit amet, consectetur adipiscing
+                elit,
+                sed do eiusmod tempor inLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                in</p>
+              <div class="row">
+                {{#each allCategories as |category| }}
+                <div class="col-xl-2 col-md-3 col-6">
+                  <input type='checkbox' name="categories" class="input-category" id="{{ category.id }}" value="{{ category.id }}"
+                    {{#isCategoryExpSelected ../experience category ../categories }} {{/isCategoryExpSelected}} />
+                  <div class="category-card">
+                    <span class='icon-{{category.fontnum}}'></span>
+                    <!-- descomentar esto par añadir estilo -->
+                    <p class="category-name">{{ category.name }} </p>
+                  </div>
+                </div>
+                {{/each}}
+              </div>
+              {{/unless}}
+
+              <hr>
+              <div class="form-group">
+                <h1 id="description">Some description</h1>
+                <div class="mb-2">
+                  <div class="form-group">
+                    <label for="name">Nombre de la actividad</label>
+                    <input type="text" class="form-control" id="name" name="name" value="{{experience.name}}">
+                  </div>
+
+                  <div class="form-group">
+                    <label for="price">Precio</label>
+                    <input type="Number" class="form-control" id="price" name="price" value="{{experience.price}}">
+                  </div>
+
+                  <div class="form-group">
+                    <label for="languages">Idiomas</label>
+                    <br />
+                    <input id="Español" type="checkbox" name="languages" value="Español" />
+                    <label for="Español">Español</label>
+                    <br />
+                    <input id="Inglés" type="checkbox" name="languages" value="Inglés" />
+                    <label for="Inglés">Inglés</label>
+                    <br />
+                    <input id="Francés" type="checkbox" name="languages" value="Francés" />
+                    <label for="Francés">Francés</label>
+                    <br />
+                    <input id="Alemán" type="checkbox" name="languages" value="Alemán" />
+                    <label for="Alemán">Alemán</label>
+                    <br />
+                    <input id="Chino" type="checkbox" name="languages" value="Chino" />
+                    <label for="Chino">Chino</label>
+                  </div>
+                  
+                  <div class="form-group">
+                    <label for="duration">Duración</label>
+                    <input type="Number" class="form-control" id="duration" name="duration" value="{{experience.duration}}">
+                  </div>
+
+                  <div class="form-group">
+                    <label for="includes">¿Que incluye?</label>
+                    <br />
+                    <input id="Bebidas" type="checkbox" name="includes" value="Bebidas" />
+                    <label for="Bebidas">Bebidas</label>
+                    <br />
+                    <input id="Comida" type="checkbox" name="includes" value="Comida" />
+                    <label for="Comida">Comida</label>
+                    <br />
+                    <input id="Aperitivo" type="checkbox" name="includes" value="Aperitivo" />
+                    <label for="Aperitivo">Aperitivo</label>
+                    <br />
+                    <input id="Equipo" type="checkbox" name="includes" value="Equipo" />
+                    <label for="Equipo">Equipo</label>
+                  </div>
+
+                  <div class="form-group">
+                    <label for="description">Descripción</label>
+                    <textarea class="form-control" name="description" rows=3>{{experience.description}}</textarea>
+                  </div>
+
+                  <div class="form-group">
+                    <label for="anymore">¿Que debes saber?</label>
+                    <textarea class="form-control" name="anymore" rows=2>{{experience.anymore}}</textarea>
+                  </div>
+
+                  <div class="form-group">
+                    <label for="photos">Fotos</label>
+                    <input type="Number" class="form-control" id="photos" name="photos" value="{{experience.photos}}">
+                  </div>
+
+                  <div class="form-group">
+                    <h4 id="lugar">Lugar de la experiencia</h4>
+                    <h5 class="mb-3">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor in</h5>
+
+                    <div class="form-group" id="floating-panel">
+                      <input onclick="removeLine();" type=button value="Remove line">
+                      <input onclick="addLine();" type=button value="Restore line">
+                    </div>
+
+                    <div class="form-group">
+                      <input id="address" class="form-control" type="textbox" placeholder="Introduce aquí el sitio que quieres buscar" />
+                      <label>Latitud: </label>
+                      <span id="x"></span>
+                      <label>Longitud: </label>
+                      <span id="y"></span>
+                      <button type="button" class="btn btn-primary mt-3" value="Localizar" onclick="codeAddress()">Buscar</button>
+                    </div>
+
+                    <div id="map"></div>
+                    <div id="map2"></div>
+
+                  </div>
+                </div>
+              </div>
+             <button type="submit" class="btn btn-primary">Submit</button>
+        </article>
+    </form>
+<script>
+  var decodedJson = decodeURIComponent("{{{pointsJSON}}}");
+  var jsonObj = JSON.parse(decodedJson);
+  window.points = jsonObj;
+</script>
